add -Xmx -Xms option in config file (#181)
* add -Xmx -Xms option in config file